force-app/main/default/objects/Contact/fields/Contact_description__c.field-meta.xml
<CustomField>
    <fullName>Contact_description__c</fullName>
    <formula>$Label.Contact_description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact description</label>
    <type>Text</type>
</CustomField>