force-app/main/default/objects/Contact/fields/contact_important1__c.field-meta.xml
<CustomField>
    <fullName>contact_important1__c</fullName>
    <formula>$Label.Contact_description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contact important</label>
    <type>Text</type>
</CustomField>