force-app/main/default/objects/Contact/fields/University_Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>University_Email_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>University Email Verified</label>
    <type>Checkbox</type>
</CustomField>